[metadata]
name=aiotools
version=attr: aiotools.__version__
author=Joongi Kim
author_email=me@daybreaker.info
long_description=file: README.md, CHANGES.md
long_description_content_type=text/markdown
description=Idiomatic asyncio utilities
license=MIT
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Framework :: AsyncIO
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development
url = https://github.com/achimnol/aiotools
project_urls =
    Documentation = https://aiotools.readthedocs.io
    Tracker = https://github.com/achimnol/aiotools/issues
    Source = https://github.com/achimnol/aiotools
    Code Coverage = https://codecov.io/github/achimnol/aiotools
platforms =
    any

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    build>=0.10.0
    wheel>=0.40.0
    twine~=4.0
    towncrier~=22.12
test =
    pytest~=7.4.2
    pytest-asyncio~=0.21
    pytest-cov
    pytest-mock
    codecov
dev =
    pre-commit
lint =
    ruff>=0.1.15
    ruff-lsp>=0.0.50
typecheck =
    mypy~=1.8.0
docs =
    sphinx~=4.3
    sphinx-rtd-theme~=1.0

[options.packages.find]
where = src

[bdist_wheel]
universal = false

[tool:pytest]
testpaths = tests

[mypy]
mypy_path = src

[mypy-pytest.*]
ignore_missing_imports = true
