[metadata]
name=aiotools
version = attr: aiotools.__version__
author=Joongi Kim
author_email=me@daybreaker.info
long_description=file: README.md, CHANGES.md
long_description_content_type=text/markdown
description=Idiomatic asyncio utilities
license=MIT
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Framework :: AsyncIO
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
url = https://github.com/achimnol/aiotools
project_urls =
    Documentation = https://aiotools.readthedocs.io
    Tracker = https://github.com/achimnol/aiotools/issues
    Source = https://github.com/achimnol/aiotools
    Code Coverage = https://codecov.io/github/achimnol/aiotools
platforms =
    any

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools>=51.2.0
install_requires =
    typing-extensions>=4.6.0
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    build>=1.2.2
    wheel>=0.45.1
    twine~=6.0
    towncrier~=24.8
test =
    async_timeout~=4.0.2
    pytest~=8.3.4
    pytest-asyncio~=0.25.2
    pytest-cov
    pytest-mock
    codecov
dev =
    pre-commit
lint =
    ruff>=0.9.2
    ruff-lsp>=0.0.60
typecheck =
    mypy~=1.14.1
docs =
    sphinx~=8.1.3
    sphinx-rtd-theme~=3.0.2

[options.packages.find]
where = src

[bdist_wheel]
universal = false

[tool:pytest]
testpaths = tests

[mypy]
mypy_path = src

[mypy-pytest.*]
ignore_missing_imports = true
